--- a/components/cipher/Cargo.toml
+++ b/components/cipher/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["stream-cipher", "block-cipher"]
+members = ["stream-cipher", "new-stream-cipher", "block-cipher"]
 resolver = "2"
 
 [workspace.dependencies]
